corpus/basic.tst
================================================================================
Body.1 - Paragraph, no newlines
================================================================================
a
--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr))))

================================================================================
Body.2 - Paragraph, pre newline
================================================================================

a
--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr))))

================================================================================
Body.3 - Paragraph, post newline
================================================================================
a


--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr))))

================================================================================
Body.4 - Paragraph, pre & post newline
================================================================================


a


--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr))))

================================================================================
Body.5 - Multiple elements (paragraphs)
================================================================================
a

a
--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr))
    (paragraph
      (expr))))

================================================================================
Body.6 - Multiple mixed elements
================================================================================
a

# a
--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr))
    (comment
      (expr))))

================================================================================
Paragraph.1 - Multiline
================================================================================
a
a

--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr)
      (expr))))

================================================================================
Paragraph.2 - Many multiline
================================================================================
a
a
a
a
a
a
a
a
a
a
a
a

--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr)
      (expr)
      (expr)
      (expr)
      (expr)
      (expr)
      (expr)
      (expr)
      (expr)
      (expr)
      (expr)
      (expr))))

================================================================================
Paragraph.3 - Multiline & separate
================================================================================

a
a
a

a

--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr)
      (expr)
      (expr))
    (paragraph
      (expr))))

================================================================================
Paragraph.4 - Multi multiline
================================================================================

a
a
a

a
a

--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr)
      (expr)
      (expr))
    (paragraph
      (expr)
      (expr))))

================================================================================
Footnote.1 - Simple
================================================================================
[fn:a] b
--------------------------------------------------------------------------------

(document
  (body
    (fndef
      (expr)
      (description
        (expr)))))

================================================================================
Footnote.2 - Brackets
================================================================================
[fn:a]]
--------------------------------------------------------------------------------

(document
  (body
    (fndef
      (expr)
      (description
        (expr)))))

================================================================================
Footnote.3 - Precedence
================================================================================
[fn:a] b
:d:
:end:
--------------------------------------------------------------------------------

(document
  (body
    (fndef
      (expr)
      (description
        (expr)))
    (drawer
      (expr))))

================================================================================
Drawer.1 - Basic
================================================================================
:name:
:end:
--------------------------------------------------------------------------------

(document
  (body
    (drawer
      (expr))))

================================================================================
Drawer.2 - Empty
================================================================================
:a:

:END:
--------------------------------------------------------------------------------

(document
  (body
    (drawer
      (expr)
      (contents))))

================================================================================
Drawer.3 - Multiple
================================================================================
:a:

:END:

:b:
:END:
--------------------------------------------------------------------------------

(document
  (body
    (drawer
      (expr)
      (contents))
    (drawer
      (expr))))

================================================================================
Drawer.4 Contents
================================================================================
:name:
a
:END:
--------------------------------------------------------------------------------

(document
  (body
    (drawer
      (expr)
      (contents
        (expr)))))

================================================================================
Drawer.5 - Junk
================================================================================
:l
--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr))))

================================================================================
Drawer.6a - Junk
================================================================================
a
:b
--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr)
      (expr))))

================================================================================
Drawer.6b - Junk
================================================================================
[fn:a] b
:c
--------------------------------------------------------------------------------

(document
  (body
    (fndef
      (expr)
      (description
        (expr)
        (expr)))))

================================================================================
Drawer.7 - Junk
================================================================================
a
:b
c
--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr)
      (expr)
      (expr))))

================================================================================
Drawer.8 - Junk
================================================================================
:a
b
--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr)
      (expr))))

================================================================================
Block.1  - Empty
================================================================================
#+BEGIN_A
#+END_B
--------------------------------------------------------------------------------

(document
  (body
    (block
      (expr))))

================================================================================
Block.2  - Contents
================================================================================
#+BEGIN_SRC ABC
a
#+END_ABC
--------------------------------------------------------------------------------

(document
  (body
    (block
      (expr)
      (expr)
      (contents
        (expr)))))

================================================================================
Block.3  - In section
================================================================================
* a

#+BEGIN_SRC ABC
a
#+END_ABC
--------------------------------------------------------------------------------

(document
  (section
    (headline
      (stars)
      (item
        (expr)))
    (body
      (block
        (expr)
        (expr)
        (contents
          (expr))))))

================================================================================
Block.4  - lowercase
================================================================================
#+begin_b
#+end_b
--------------------------------------------------------------------------------

(document
  (body
    (block
      (expr))))

================================================================================
DynamicBlock.1  - Empty
================================================================================
#+BEGIN: a b
#+END:
--------------------------------------------------------------------------------

(document
  (body
    (dynamic_block
      name: (expr)
      parameter: (expr))))

================================================================================
DynamicBlock.2  - Contents
================================================================================
#+BEGIN: a
c
#+END:
--------------------------------------------------------------------------------

(document
  (body
    (dynamic_block
      name: (expr)
      contents: (contents
        (expr)))))

================================================================================
Comment.1 - Basic
================================================================================
# a
--------------------------------------------------------------------------------

(document
  (body
    (comment
      (expr))))

================================================================================
Comment.2 - Two lines
================================================================================
# a
# a
--------------------------------------------------------------------------------

(document
  (body
    (comment
      (expr)
      (expr))))

================================================================================
Comment.3 - Two separate
================================================================================
# a

# a
--------------------------------------------------------------------------------

(document
  (body
    (comment
      (expr))
    (comment
      (expr))))

================================================================================
List.1a  - Basic: dash [-]
================================================================================
 - a
--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr))))))

================================================================================
List.1c  - Basic: star [*]
================================================================================
 * a
--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr))))))

================================================================================
List.1d  - Basic: count dot [1.]
================================================================================
 1. a
--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr))))))

================================================================================
List.1e  - Basic: count paren [1)]
================================================================================
 1) a
--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr))))))

================================================================================
List.1f  - Basic: letter dot [a.]
================================================================================
 1. a
--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr))))))

================================================================================
List.1g  - Basic: letter paren [a)]
================================================================================
 1) a
--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr))))))

================================================================================
List.2a  - two items
================================================================================

  - a
  - a

--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr)))
      (listitem
        (bullet)
        (paragraph
          (expr))))))

================================================================================
List.2d  - two items
================================================================================

  1. a
  2. a

--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr)))
      (listitem
        (bullet)
        (paragraph
          (expr))))))

================================================================================
List.2b  - two items
================================================================================

  - a

  - a

--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr)))
      (listitem
        (bullet)
        (paragraph
          (expr))))))

================================================================================
List.2c  - two lists
================================================================================

  - a


  - a

--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr))))
    (list
      (listitem
        (bullet)
        (paragraph
          (expr))))))

================================================================================
List.3a   - sublist
================================================================================

  - a
    a
    - b
    a
  - a

--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr)
          (expr))
        (list
          (listitem
            (bullet)
            (paragraph
              (expr))))
        (paragraph
          (expr)))
      (listitem
        (bullet)
        (paragraph
          (expr))))))

================================================================================
List.4a  - multiline item
================================================================================

  - a
    b

--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr)
          (expr))))))

================================================================================
List.4b  - multiline item
================================================================================

  - a

    b

--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr))
        (paragraph
          (expr))))))

================================================================================
List.5   - dedent
================================================================================

  - a
  b
  - a

--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr))))
    (paragraph
      (expr))
    (list
      (listitem
        (bullet)
        (paragraph
          (expr))))))

================================================================================
List.6   - multi dedent
================================================================================

b
  - a
    - a
b

--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr))
    (list
      (listitem
        (bullet)
        (paragraph
          (expr))
        (list
          (listitem
            (bullet)
            (paragraph
              (expr))))))
    (paragraph
      (expr))))

================================================================================
List.7a  - change bullet
================================================================================

  - a
  + a

--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr))))
    (list
      (listitem
        (bullet)
        (paragraph
          (expr))))))

================================================================================
List.8a  - Whitespace
================================================================================
  - 
--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)))))

================================================================================
List.8b  - Whitespace after text
================================================================================
  - a 
--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr))))))

================================================================================
List.9   - newline before sub listitem
================================================================================
- a

  - b
--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr))
        (list
          (listitem
            (bullet)
            (paragraph
              (expr))))))))

================================================================================
List.10a - Checkbox [ ]
================================================================================
- [ ] a
--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (checkbox)
        (paragraph
          (expr)))
      )))

================================================================================
List.10b - Checkbox [x]
================================================================================
- [x] a
--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (checkbox)
        (paragraph
          (expr)))
      )))

================================================================================
List.10c - Checkbox [X]
================================================================================
- [X] a
--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (checkbox)
        (paragraph
          (expr)))
      )))

================================================================================
List.10d - Checkbox [-]
================================================================================
- [-] a
--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (checkbox)
        (paragraph
          (expr)))
      )))

================================================================================
List.11a  - No Checkbox
================================================================================
- +[ ] a+
--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr)
          (expr)
          (expr))))))

================================================================================
List.11b  - No Checkbox
================================================================================
- [-  a]
--------------------------------------------------------------------------------

(document
  (body
    (list
      (listitem
        (bullet)
        (paragraph
          (expr)
          (expr))))))

================================================================================
Directive.1  - Document
================================================================================
#+a: b

--------------------------------------------------------------------------------

(document
  (body
    (directive
      (expr)
      (value
        (expr)))))

================================================================================
Directive.2  - Bare
================================================================================

#+a: b
--------------------------------------------------------------------------------

(document
  (body
    (directive
      (expr)
      (value
        (expr)))))

================================================================================
Directive.3  - Doc & Bare
================================================================================
#+a: b

#+a: b
--------------------------------------------------------------------------------

(document
  (body
    (directive
      (expr)
      (value
        (expr)))
    (directive
      (expr)
      (value
        (expr)))))

================================================================================
Directive.4a - Attached
================================================================================

#+a: b
c
--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (directive
        (expr)
        (value
          (expr)))
      (expr))))

================================================================================
Directive.4b - Attached
================================================================================
#+a: b
c
--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (directive
        (expr)
        (value
          (expr)))
      (expr))))

================================================================================
Directive.5  - No empty lines
================================================================================
* a
#+a: b
c
--------------------------------------------------------------------------------

(document
  (section
    (headline
      (stars)
      (item
        (expr)))
    (body
      (paragraph
        (directive
          (expr)
          (value
            (expr)))
        (expr)))))

================================================================================
Directive.6a - List
================================================================================

#+a: b
  - c
--------------------------------------------------------------------------------

(document
  (body
    (list
      (directive
        (expr)
        (value
          (expr)))
      (listitem
        (bullet)
        (paragraph
          (expr))))))

================================================================================
Directive.6b - Sublist
================================================================================

#+a: b
  - c
    #+a: b
    - c

--------------------------------------------------------------------------------

(document
  (body
    (list
      (directive
        (expr)
        (value
          (expr)))
      (listitem
        (bullet)
        (paragraph
          (expr))
        (list
          (directive
            (expr)
            (value
              (expr)))
          (listitem
            (bullet)
            (paragraph
              (expr))))))))

================================================================================
Directive.7  - Directive unrelated to section
================================================================================

#+a: b
* c
--------------------------------------------------------------------------------

(document
  (body
    (directive
      (expr)
      (value
        (expr))))
  (section
    (headline
      (stars)
      (item
        (expr)))))

================================================================================
LatexEnv.1a - Basic
================================================================================
\begin{a*}
\end{a*}

--------------------------------------------------------------------------------

(document
  (body
    (latex_env
      (name)
      (name))))

================================================================================
LatexEnv.1b - Basic
================================================================================
\(
\)

--------------------------------------------------------------------------------

(document
  (body
    (latex_env)))

================================================================================
LatexEnv.1c - Basic
================================================================================
\[
\]

--------------------------------------------------------------------------------

(document
  (body
    (latex_env)))

================================================================================
LatexEnv.2  - Contents
================================================================================
\begin{a1}
a
\end{1a}
--------------------------------------------------------------------------------

(document
  (body
    (latex_env
      (name)
      (contents
        (expr))
      (name))))

================================================================================
LatexEnv.2b - Contents
================================================================================
\(
a
\)

--------------------------------------------------------------------------------

(document
  (body
    (latex_env
      (contents
        (expr)))))

================================================================================
LatexEnv.2c - Contents
================================================================================
\[
a
\]

--------------------------------------------------------------------------------

(document
  (body
    (latex_env
      (contents
        (expr)))))

================================================================================
LatexEnv.3  - Empty
================================================================================
\begin{a}

\end{a}
--------------------------------------------------------------------------------

(document
  (body
    (latex_env
      (name)
      (contents)
      (name))))

================================================================================
LatexEnv.4a - Pre nl
================================================================================
\begin{a}

a
\end{a}
--------------------------------------------------------------------------------

(document
  (body
    (latex_env
      (name)
      (contents
        (expr))
      (name))))

================================================================================
LatexEnv.4b - Post nl
================================================================================
\begin{a}
a

\end{a}
--------------------------------------------------------------------------------

(document
  (body
    (latex_env
      (name)
      (contents
        (expr))
      (name))))

================================================================================
LatexEnv.4c - Spare nls
================================================================================
\begin{a}

a

\end{a}
--------------------------------------------------------------------------------

(document
  (body
    (latex_env
      (name)
      (contents
        (expr))
      (name))))

================================================================================
LatexEnv.5  - Uppercase
================================================================================
\begin{a}
\end{a}

--------------------------------------------------------------------------------

(document
  (body
    (latex_env
      (name)
      (name))))

================================================================================
Precedence.1  - Paragraph comment
================================================================================
a
# a
--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr))
    (comment
      (expr))))

================================================================================
Precedence.2  - Paragraph comment paragraph
================================================================================
a
# a
a
--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr))
    (comment
      (expr))
    (paragraph
      (expr))))

================================================================================
Precedence.3  - Comment paragraph
================================================================================
# a
a
--------------------------------------------------------------------------------

(document
  (body
    (comment
      (expr))
    (paragraph
      (expr))))

================================================================================
Precedence.4  - Paragraph drawer
================================================================================
a
:AB:
c
:END:
--------------------------------------------------------------------------------

(document
  (body
    (paragraph
      (expr))
    (drawer
      (expr)
      (contents
        (expr)))))

================================================================================
Precedence.5  - Comment paragraph drawer
================================================================================
# a
b
:c:
d
:end:
--------------------------------------------------------------------------------

(document
  (body
    (comment
      (expr))
    (paragraph
      (expr))
    (drawer
      (expr)
      (contents
        (expr)))))

================================================================================
Table.1  - 1x1
================================================================================
|a|
--------------------------------------------------------------------------------

(document
  (body
    (table
      (row
        (cell
          (contents
            (expr)))))))

================================================================================
Table.2  - 1x2
================================================================================
|a|b c|
--------------------------------------------------------------------------------

(document
  (body
    (table
      (row
        (cell
          (contents
            (expr)))
        (cell
          (contents
            (expr)
            (expr)))))))

================================================================================
Table.3  - 2x2
================================================================================
|a|b|
|c|d|
--------------------------------------------------------------------------------

(document
  (body
    (table
      (row
        (cell
          (contents
            (expr)))
        (cell
          (contents
            (expr))))
      (row
        (cell
          (contents
            (expr)))
        (cell
          (contents
            (expr)))))))

================================================================================
Table.4  - empty cell
================================================================================
|a|b|
| |d|
--------------------------------------------------------------------------------

(document
  (body
    (table
      (row
        (cell
          (contents
            (expr)))
        (cell
          (contents
            (expr))))
      (row
        (cell)
        (cell
          (contents
            (expr)))))))

================================================================================
Table.5  - empty cells
================================================================================
|| |
--------------------------------------------------------------------------------

(document
  (body
    (table
      (row
        (cell)
        (cell)))))

================================================================================
Table.6  - simple hr
================================================================================
|-|
--------------------------------------------------------------------------------

(document
  (body
    (table
      (hr))))

================================================================================
Table.7  - words
================================================================================
|a | b |  c|
|--+---+---|
|Some words about | something |
--------------------------------------------------------------------------------

(document
  (body
    (table
      (row
        (cell
          (contents
            (expr)))
        (cell
          (contents
            (expr)))
        (cell
          (contents
            (expr))))
      (hr)
      (row
        (cell
          (contents
            (expr)
            (expr)
            (expr)))
        (cell
          (contents
            (expr)))))))

================================================================================
Table.8  - Formula
================================================================================
|a|
#+TBLFM: ab cd ef gh

--------------------------------------------------------------------------------

(document
  (body
    (table
      (row
        (cell
          (contents
            (expr))))
      (formula
        (expr)
        (expr)
        (expr)
        (expr)))))

================================================================================
Table.9  - Multiple formula
================================================================================
|a|
#+TBLFM: ab cd ef gh1
#+TBLFM: ab cd ef gh2
#+TBLFM: ab cd ef gh3

--------------------------------------------------------------------------------

(document
  (body
    (table
      (row
        (cell
          (contents
            (expr))))
      (formula
        (expr)
        (expr)
        (expr)
        (expr))
      (formula
        (expr)
        (expr)
        (expr)
        (expr))
      (formula
        (expr)
        (expr)
        (expr)
        (expr)))))

================================================================================
Table.10 - Multiline
================================================================================

| 1 |
| 2 |
| 3 |
| 4 |
| 5 |
| 6 |

--------------------------------------------------------------------------------

(document
  (body
    (table
      (row
        (cell
          (contents
            (expr))))
      (row
        (cell
          (contents
            (expr))))
      (row
        (cell
          (contents
            (expr))))
      (row
        (cell
          (contents
            (expr))))
      (row
        (cell
          (contents
            (expr))))
      (row
        (cell
          (contents
            (expr)))))))

================================================================================
Table.11 - Cell contents with '-'
================================================================================

| - |

--------------------------------------------------------------------------------

(document
  (body
    (table
      (row
        (cell
          (contents
            (expr)))))))

================================================================================
Headlines.1a - No eols
================================================================================
* l1
--------------------------------------------------------------------------------

(document
  (section
    (headline
      (stars)
      (item
        (expr)))))
